fix: make form container height dynamic based on the main-page dimensions, tweak form alignment along y-axis

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 #header {
-  margin-bottom: 4rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
-
-.navbar {
+#header .navbar {
   background-color: #032541;
 }
-.navbar i {
+#header .navbar i {
   font-size: 2.5rem;
   color: white;
 }
-.navbar .navbar-nav .nav-link {
+#header .navbar .navbar-nav .nav-link {
   color: white;
   font-weight: 500;
   font-size: 1.3rem;
 }
-.navbar .navbar-nav .nav-link:hover {
+#header .navbar .navbar-nav .nav-link:hover {
   color: #1c93f5;
 }
-.navbar .navbar-nav .nav-link:focus, .navbar .navbar-nav .nav-link:active, .navbar .navbar-nav .nav-link.active {
+#header .navbar .navbar-nav .nav-link:focus, #header .navbar .navbar-nav .nav-link:active, #header .navbar .navbar-nav .nav-link.active {
   color: #7dc1f9;
 }
-.navbar .navbar-toggler {
+#header .navbar .navbar-toggler {
   background-color: #dff0fe;
   border-color: white;
 }
-.navbar .nav-item {
+#header .navbar .nav-item {
   text-align: end;
 }
 
@@ -362,16 +365,19 @@
 }
 
 .sign-in-body {
-  padding-top: 66px;
-  margin-bottom: 5rem;
+  height: 100vh;
 }
 
 .sign-in-main {
   width: 100%;
+  height: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding-bottom: 2rem;
+  padding-top: 74px;
 }
 .sign-in-main .background-wrapper {
   width: 100%;
@@ -415,15 +421,23 @@
   border-radius: 13px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
   width: 450px;
-  height: 500px;
-  width: 95%;
-  max-width: 450px;
-  margin-top: 1rem;
+  position: relative;
+  transform: translateY(-3%);
 }
-@media (min-width: 576px) {
+@media (max-width: 575.98px) {
   .sign-in-form {
-    margin-top: 3rem;
+    width: 95%;
+    max-width: 450px;
+    transform: translateY(-8%);
   }
+}
+.sign-in-form .is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.sign-in-form .is-visible {
+  opacity: 1;
+  pointer-events: auto;
 }
 .sign-in-form #form-main-page label {
   -webkit-user-select: none;
@@ -503,6 +517,11 @@
   justify-content: flex-end;
   text-align: center;
   gap: 3rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: inherit;
 }
 .sign-in-form #form-second-page .second-page-text-and-emoji-wrapper {
   -webkit-user-select: none;
