--- a/scss/components/_sign-in.scss
+++ b/scss/components/_sign-in.scss
@@ -1,15 +1,17 @@
 .sign-in-body {
-    padding-top: 66px;
-    margin-bottom: 5rem;
+    height: 100vh;
 }
 
 .sign-in-main {
     width: 100%;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-
+    padding-bottom: 2rem;
+    padding-top: 74px;
     .background-wrapper {
         width: 100%;
         height: 100%;
@@ -55,16 +57,24 @@
     border-radius: 13px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
     width: 450px;
-    height: 500px;
-    
-    @include media-breakpoint-up(sm) {
-        margin-top: 3rem;
-    }
+    position: relative;
+    transform: translateY(-3%);
 
-    @include media-breakpoint-down(xs) {
+
+    @include media-breakpoint-only(xs) {
         width: 95%;
         max-width: 450px;
-        margin-top: 1rem;
+        transform: translateY(-8%);
+    }
+
+    .is-hidden {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    .is-visible {
+        opacity: 1;
+        pointer-events: auto;
     }
 
     #form-main-page {
@@ -160,6 +170,11 @@
         justify-content: flex-end;
         text-align: center;
         gap: 3rem;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: inherit;
         
         .second-page-text-and-emoji-wrapper {
             user-select: none;
